# rtx-pro-6000-bench

./: .gitignore  DEPLOY-DEEPSEEK-V4-FLASH.md  README.md  pyproject.toml
bench/deepseek-v4-flash_W300_TP4_sglang/: launch-single.sh  launch.sh  sglang-single.yaml  sglang.yaml
bench/deepseek-v4-flash_W300_TP4_sglang/deepseek-v4-flash_random_16384in_1024out_c104_W300/: openai-infqps-concurrency104-deepseek-v4-flash-20260610-202615.json  telemetry.csv  telemetry_summary.json
bench/deepseek-v4-flash_W300_TP4_sglang/deepseek-v4-flash_random_16384in_1024out_c112_W300/: openai-infqps-concurrency112-deepseek-v4-flash-20260610-204446.json  telemetry.csv  telemetry_summary.json
bench/deepseek-v4-flash_W300_TP4_sglang/deepseek-v4-flash_random_16384in_1024out_c120_W300/: openai-infqps-concurrency120-deepseek-v4-flash-20260610-210322.json  telemetry.csv  telemetry_summary.json
bench/deepseek-v4-flash_W300_TP4_sglang/deepseek-v4-flash_random_16384in_1024out_c16_W300/: telemetry.csv  (+2 more)
bench/devstral-2-123b-instruct-2512_W250_TP4_vllm/: vllm.yaml
bench/glm51-478b-a42b-reap-nvfp4_W250_TP4_sglang/: sglang.yaml
bench/minimax_m25-nvfp4_W250_TP4_vllm/: vllm.yaml
bench/minimax_m25-nvfp4_W300_TP2_vllm/: vllm.yaml
bench/qwen35-397b-a17b-nvfp4_W250_TP4_vllm/: vllm.yaml
docs/: DEPLOY-MXFP4-W4A4-DEEPSEEK-V4-FLASH-SM120.md  deploy-fp8-repack.md  deploy-mxfp4-w4a4-cutedsl.md  deploy-nvfp4-cutedsl.md
notebooks/: analysis.ipynb
quests/: quest0.md  quest1.md  quest2.md  quest3.md  quest4.md
quests/priors/: QUEST-DEEPSEEK-V4-FLASH-HILLCLIMB.md  QUEST-FP4-OFFICIAL-CHECKPOINT-SM120.md  QUEST-SM120-NATIVE-FP4-MOE-KERNEL.md  QUEST-UPSTREAM-SM120-HMMA-TO-SGLANG.md  QUEST_MXFP4_TO_NVFP4_W4A16.md  quest-glm51-sglang.md
src/misc/: quantize_devstral2_123b_nvfp4.py  recipe_devstral2_123b_nvfp4.yaml
src/vllm_bench/: bench_sweep.py
(+1316 files in other folders)
