[project]
name = "vllm-bench"
version = "0.1.0"
description = "Benchmark sweep harness for vLLM serving — sweeps concurrency, input/output lengths, and produces comparison charts."
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "pynvml",
    "vllm>=0.17.1",
]

[project.optional-dependencies]
dev = [
    "ruff",
]

[project.scripts]
bench-sweep = "vllm_bench.bench_sweep:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
