[project]
name = "vllm-bench"
version = "0.1.0"
description = "Benchmark sweep harness for vLLM serving — sweeps concurrency, input/output lengths, and produces comparison charts."
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "pandas>=2.3.3",
    "pynvml",
    "vllm>=0.17.1",
    # DeepSeek-V4 config parsing (sglang bench tokenizer); vLLM 0.19.1 allows >=4.56,!=5.0-5.5.0.
    "transformers>=5.8.1",
]

[project.optional-dependencies]
dev = [
    "ruff",
]
notebooks = [
    "ipykernel",
    "numpy",
    "papermill",
]

[project.scripts]
bench-sweep = "vllm_bench.bench_sweep:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
